# svea_gt_mpc

./: .gitignore  README.md  requirements.txt  zensical.toml
docker/: Dockerfile
src/gt_mpc/: package.xml  setup.cfg  setup.py
src/gt_mpc/gt_mpc/controllers/: __init__.py  game_controller.py  overtake_solver.jl  ping_test.py  ros_ping_test.md
src/gt_mpc/gt_mpc/julia/Overtake/: Project.toml
src/gt_mpc/gt_mpc/julia/Overtake/src/: Overtake.jl
src/gt_mpc/launch/: overtake.launch.py  overtake.xml
src/gt_mpc/scripts/: car_bridge.py  overtake.py
src/svea_core/maps/: floor2_no_obstacles.yaml
src/svea_core/scripts/: sim_svea.py
