<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gt_mpc</name>
  <version>0.0.0</version>
  <description>Game theoretic MPC control</description>
  <maintainer email="therjo@kth.se">Theresa Johansson</maintainer>
  <license>TODO: License declaration</license>

  <depend>svea_core</depend>
  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
